tests/grammar.txt
<verse>           ::= <phrase> | <phrase> <verse>
<phrase>          ::= <full-word> [<word-operator> <full-word>]
<full-word>       ::= <auto-word> 
                    | <manual-word> 
                    | <stressed-word>
                    | <fragments>
<fragments>       ::= '|' <fragment> ['|' <fragment>] + '|'
<auto-word>       ::= <word> [<vowel-operator> <word>]
<manual-word>     ::= '[' <word> ['|' <word> ] + ']'
<stressed-word>   ::= <stress-operator> <word>
<word-operator>   ::= '/' | '*'
<vowel-operator>  ::= '~' | '^'
<stress-operator> ::= '>' | '<'
<fragment>        ::= <word-union> | '+' <word-union>
<word-union>      ::= <word> '_' <word> ['_' <word>] +
<word>            ::= <letter> | <letter> <word>
<letter>          ::= 'a' | 'b' | 'c' | 'd' | 'e' | 'f' | 'g' | 'h'
                    | 'j' | 'i' | 'k' | 'l' | 'm' | 'n' | 'o' | 'p'
                    | 'q' | 'r' | 's' | 't' | 'u' | 'v' | 'w' | 'x'
                    | 'y' | 'z' | 'ç' | 'à' | 'á' | 'ã' | 'â' | 'é'
                    | 'ê' | 'í' | 'ó' | 'õ' | 'ô' | 'ú'
